--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:18.0.0'
-    compile files('C:\\Users\\Maurizio\\AndroidStudioProjects\\markin86-radioscan-android-504e403534be\\libs\\caenrfidlibrary.jar')
+    compile files('C:\\Users\\Maurizio\\AndroidStudioProjects\\app-radio\\libs\\caenrfidlibrary.jar')
     // compile files('libs/caenrfidlibrary.jar')
 
 }
